Add -DGTK_MULTIDEVICE_SAFE to CFLAGS.

--- a/configure.ac
+++ b/configure.ac
@@ -25,6 +25,7 @@ PKG_PROG_PKG_CONFIG([0.20])
 
 # check for gtk
 PKG_CHECK_MODULES([GTK], [gtk+-3.0 >= 2.90.1])
+GTK_CFLAGS+=-DGTK_MULTIDEVICE_SAFE
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
