Revert "Remove XInput stuff from build system."
This reverts commit fc6841192289a53dd7682053c1171c15051c7d83.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,8 @@
 
 AM_CFLAGS =\
 	-Wall \
-	$(GTK_CFLAGS) 
+	$(GTK_CFLAGS) \
+	$(XINPUT_CFLAGS)
 
 
 
@@ -23,8 +24,8 @@ gromit_mpx_SOURCES = \
 gromit_mpx_LDFLAGS = 
 
 gromit_mpx_LDADD = \
-	$(GTK_LIBS) 
-
+	$(GTK_LIBS) \
+	$(XINPUT_LIBS)
 
 
 
