Use GTK/GDK accessor functions throughout the code.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,8 +2,8 @@
 
 AM_CFLAGS =\
 	-Wall \
-	$(GTK_CFLAGS) \
-	$(XINPUT_CFLAGS)
+	$(GTK3_CFLAGS) \
+	$(XINPUT2_CFLAGS)
 
 
 
@@ -24,8 +24,8 @@ gromit_mpx_SOURCES = \
 gromit_mpx_LDFLAGS = 
 
 gromit_mpx_LDADD = \
-	$(GTK_LIBS) \
-	$(XINPUT_LIBS)
+	$(GTK3_LIBS) \
+	$(XINPUT2_LIBS)
 
 
 
