--- a/configure.ac
+++ b/configure.ac
@@ -24,15 +24,15 @@ AC_HEADER_STDC
 PKG_PROG_PKG_CONFIG([0.20]) 
 
 # check for gtk
-PKG_CHECK_MODULES([GTK], [gtk+-3.0 >= 2.90.1])
-GTK_CFLAGS+=-DGTK_MULTIDEVICE_SAFE
-AC_SUBST(GTK_CFLAGS)
-AC_SUBST(GTK_LIBS)
+PKG_CHECK_MODULES([GTK3], [gtk+-3.0 >= 2.90.1])
+GTK3_CFLAGS+="-DGTK_MULTIDEVICE_SAFE -DDISABLE_DEPRECATED -DGSEAL_ENABLE"
+AC_SUBST(GTK3_CFLAGS)
+AC_SUBST(GTK3_LIBS)
 
 # check for XInput
-PKG_CHECK_MODULES([XINPUT], [xi >= 1.3])
-AC_SUBST(XINPUT_CFLAGS)
-AC_SUBST(XINPUT_LIBS)
+PKG_CHECK_MODULES([XINPUT2], [xi >= 1.3])
+AC_SUBST(XINPUT2_CFLAGS)
+AC_SUBST(XINPUT2_LIBS)
 
 
 
