--- a/data/gromit-mpx.cfg
+++ b/data/gromit-mpx.cfg
@@ -1,4 +1,4 @@
-# Default gromit configuration 
+# Default gromit-mpx configuration 
 # taken from  Totem's telestrator mode config
 # added default entries
 
