Make debian packaging lintian conform.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,6 @@ SUBDIRS = src
 gromit_mpxdocdir = $(datadir)/doc/gromit-mpx
 gromit_mpxdoc_DATA = \
 	README\
-	COPYING\
 	AUTHORS\
 	ChangeLog\
 	NEWS
@@ -14,7 +13,8 @@ Applicationsdir = $(datadir)/applications/
 Applications_DATA = data/gromit-mpx.desktop
 
 pixmapdir = $(datadir)/pixmaps
-pixmap_DATA = data/gromit-mpx.png
+pixmap_DATA = data/gromit-mpx.png \
+              data/gromit-mpx.xpm
 
 configdir = $(sysconfdir)/gromit-mpx
 config_DATA = data/gromit-mpx.cfg
@@ -22,5 +22,6 @@ config_DATA = data/gromit-mpx.cfg
 EXTRA_DIST = $(gromit_mpxdoc_DATA) \
              $(Applications_DATA) \
              $(pixmap_DATA) \
-             $(config_DATA)
+             $(config_DATA) \
+             COPYING
 
