--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,12 +1,11 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CFLAGS =\
-	-Wall \
+AM_CFLAGS = -Wall -Wextra -Wno-unused-parameter
+
+AM_CPPFLAGS = \
 	$(GTK3_CFLAGS) \
 	$(XINPUT2_CFLAGS) \
 	$(X11_CFLAGS)
-
-
 
 bin_PROGRAMS = gromit-mpx
 
@@ -21,14 +20,3 @@ gromit_mpx_SOURCES = \
 	input.h \
 	erase_cursor.xpm \
 	paint_cursor.xpm 
-
-gromit_mpx_LDFLAGS = 
-
-gromit_mpx_LDADD = \
-	$(GTK3_LIBS) \
-	$(XINPUT2_LIBS) \
-	$(X11_LIBS) \
-	-lm
-
-
-
