Address desktop-file-validate issues.

--- a/data/gromit-mpx.desktop
+++ b/data/gromit-mpx.desktop
@@ -1,5 +1,4 @@
 [Desktop Entry]
-Encoding=UTF-8
 Exec=gromit-mpx
 Icon=gromit-mpx
 Name=Gromit-MPX
@@ -7,5 +6,4 @@ Type=Application
 Comment=A multi pointer annotation tool
 Terminal=false
 StartupNotify=false
-Categories=Application;Graphics;
-
+Categories=Graphics;
