--- a/data/gromit-mpx.desktop
+++ b/data/gromit-mpx.desktop
@@ -3,7 +3,8 @@ Exec=gromit-mpx
 Icon=gromit-mpx
 Name=Gromit-MPX
 Type=Application
-Comment=A multi pointer annotation tool
+Comment=GRaphics Over MIscelaneous Things, a multi pointer annotation tool
+Comment[pl]=Program do rysowania bezpośrednio po ekranie
 Terminal=false
 StartupNotify=false
 Categories=Graphics;
