Revert "flatten into single Makefile.am"
This reverts commit 2bb6f900f144332b08016d390450fc42b7d8f889.

It made developing cumbersome as make has to be called from outside the
source directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 *.o
 .deps/
-.dirstamp
 /aclocal.m4
 /autom4te.cache/
 /compile
@@ -10,9 +9,9 @@
 /config.status
 /configure
 /depcomp
-/gromit-mpx
 /install-sh
 /missing
+/src/gromit-mpx
 /stamp-h1
 Makefile
 Makefile.in
