Convert the tray icon code to be compatible to Ubuntu-Unity.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,6 +4,7 @@ AM_CFLAGS = -Wall -Wextra -Wno-unused-parameter
 
 AM_CPPFLAGS = \
 	$(GTK3_CFLAGS) \
+	$(APPINDICATOR_CFLAGS) \
 	$(XINPUT2_CFLAGS) \
 	$(X11_CFLAGS)
 
