--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ configure_file(build-config.h_cmake_in build-config.h)
 
 find_package(PkgConfig)
 
-pkg_check_modules(gtk3 "gtk+-3.0 >= 2.99.3")
-pkg_check_modules(appindicator3 "appindicator3-0.1 >= 0.4.92")
-pkg_check_modules(xinput "xi >= 1.3")
-pkg_check_modules(x11 x11)
+pkg_check_modules(gtk3 REQUIRED "gtk+-3.0 >= 2.99.3")
+pkg_check_modules(appindicator3 REQUIRED "appindicator3-0.1 >= 0.4.92")
+pkg_check_modules(xinput REQUIRED "xi >= 1.3")
+pkg_check_modules(x11 REQUIRED x11)
 
 include_directories(
     ${CMAKE_CURRENT_BINARY_DIR}
