FUNDING.yml: fix syntax problems

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,2 @@
-# These are supported funding model platforms
-
-liberapay:bk138
-custom:flattr.com/github/bk138
+liberapay: bk138
+custom: https://flattr.com/github/bk138
