--- a/data/gromit-mpx.cfg
+++ b/data/gromit-mpx.cfg
@@ -2,6 +2,9 @@
 # taken from  Totem's telestrator mode config
 # added default entries
 
+# Uncomment to set Hot key to a custom value
+# HOTKEY = "F9";
+
 "red Pen" = PEN (size=5 color="red");				
 "blue Pen" = "red Pen" (color="blue");				
 "yellow Pen" = "red Pen" (color="yellow");			
