--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 issuehunt: bk138/gromit-mpx
 liberapay: bk138
 patreon: bk138
-custom: https://flattr.com/github/bk138
+custom: https://www.paypal.com/donate?hosted_button_id=V22QQ3EAQ7K9W
