flatpak: fix appindicator not showing up in Ubuntu
Fixes https://github.com/bk138/gromit-mpx/issues/123#issuecomment-792043568

https://github.com/ubuntu/gnome-shell-extension-appindicator/issues/74
has some background.

--- a/flatpak/net.christianbeier.Gromit-MPX.yml
+++ b/flatpak/net.christianbeier.Gromit-MPX.yml
@@ -5,6 +5,8 @@ sdk: org.gnome.Sdk
 command: gromit-mpx
 finish-args:
   - --socket=x11
+  # needed to show appindicator in Ubuntu
+  - --talk-name=org.kde.StatusNotifierWatcher
   # this is the dconf hole for setting hotkeys under Wayland
   - --filesystem=xdg-run/dconf
   - --filesystem=~/.config/dconf:ro
