Add arrow positioning option

--- a/data/gromit-mpx.cfg
+++ b/data/gromit-mpx.cfg
@@ -1,4 +1,4 @@
-# Default gromit-mpx configuration 
+# Default gromit-mpx configuration
 # taken from  Totem's telestrator mode config
 # added default entries
 
@@ -6,16 +6,16 @@
 # HOTKEY = "F9";
 # UNDOKEY = "F8";
 
-"red Pen" = PEN (size=5 color="red");				
-"blue Pen" = "red Pen" (color="blue");				
-"yellow Pen" = "red Pen" (color="yellow");			
-"green Marker" = PEN (size=6 color="green" arrowsize=1);		
-									
-"Eraser" = ERASER (size = 75);					
-									
-"default" = "red Pen";						
-"default"[SHIFT] = "blue Pen";					
-"default"[CONTROL] = "yellow Pen";				
-"default"[2] = "green Marker";					
-"default"[Button3] = "Eraser";					
+"red Pen" = PEN (size=5 color="red");
+"blue Pen" = "red Pen" (color="blue");
+"yellow Pen" = "red Pen" (color="yellow");
+"green Marker" = PEN (size=6 color="green" arrowsize=1 arrowposition="end");
+
+"Eraser" = ERASER (size = 75);
+
+"default" = "red Pen";
+"default"[SHIFT] = "blue Pen";
+"default"[CONTROL] = "yellow Pen";
+"default"[2] = "green Marker";
+"default"[Button3] = "Eraser";
 
