--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ find_package(PkgConfig)
 find_package(Gettext)
 
 pkg_check_modules(gtk3 REQUIRED "gtk+-3.0 >= 3.22")
-pkg_check_modules(xinput REQUIRED "xi >= 1.3")
-pkg_check_modules(x11 REQUIRED x11)
+pkg_check_modules(xinput "xi >= 1.3")
+pkg_check_modules(x11 x11)
 pkg_check_modules(appindicator3 "ayatana-appindicator3-0.1 >= 0.5")
 if(NOT appindicator3_FOUND)
   pkg_check_modules(appindicator3 REQUIRED "appindicator3-0.1 >= 0.4.92")
