first version of --deftool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,8 @@ set(sources
     src/callbacks.h
     src/config.c
     src/config.h
+    src/parser.c
+    src/parser.h
     src/drawing.c
     src/drawing.h
     src/coordlist_ops.c
