smooth renamed to coordlist_ops, smooth_priv.h removed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,8 +54,8 @@ set(sources
     src/config.h
     src/drawing.c
     src/drawing.h
-    src/smooth.c
-    src/smooth.h
+    src/coordlist_ops.c
+    src/coordlist_ops.h
     src/main.c
     src/main.h
     src/input.c
