flatpak: add --share=ipc to manifest
As required by manifest checker.

--- a/flatpak/net.christianbeier.Gromit-MPX.yml
+++ b/flatpak/net.christianbeier.Gromit-MPX.yml
@@ -5,6 +5,7 @@ sdk: org.gnome.Sdk
 command: gromit-mpx
 finish-args:
   - --socket=x11
+  - --share=ipc
   # needed to show appindicator in Ubuntu
   - --talk-name=org.kde.StatusNotifierWatcher
   # this is the dconf hole for setting hotkeys under Wayland
