Added CIRCLE support

--- a/data/gromit-mpx.cfg
+++ b/data/gromit-mpx.cfg
@@ -29,6 +29,8 @@
 
 "red Orthogonal" = ORTHOGONAL (color="red" size=5 simplify=15 radius=20 minlen=50 snap=40);
 
+"blue Circle" = CIRCLE (color="blue" size=3);
+
 #
 # Tool mappings to input devices. Not all tools are mapped in this config.
 #
@@ -37,7 +39,8 @@
 "default"[SHIFT] = "blue Pen";					
 "default"[CONTROL] = "yellow Pen";				
 "default"[2] = "green Marker";					
-"default"[Button3] = "Eraser";					
+"default"[Button3] = "Eraser";
+"default"[ALT] = "blue Circle";					
 
 #
 # Hot key / undo key.
