--- a/data/gromit-mpx.cfg
+++ b/data/gromit-mpx.cfg
@@ -31,6 +31,12 @@
 
 "blue Circle" = CIRCLE (color="blue" size=3);
 
+"red Filled Circle" = CIRCLE (color="black" size=3 fillcolor="red");
+
+# Note: For transparency, use the rgba() format (values from 0.0 to 1.0 for alpha).
+# The hex format with alpha (#RRGGBBAA) is not supported.
+"semi-transparent Circle" = CIRCLE (color="black" size=3 fillcolor="rgba(255, 0, 0, 0.5)");
+
 #
 # Tool mappings to input devices. Not all tools are mapped in this config.
 #
@@ -40,7 +46,9 @@
 "default"[CONTROL] = "yellow Pen";				
 "default"[2] = "green Marker";					
 "default"[Button3] = "Eraser";
-"default"[ALT] = "blue Circle";					
+"default"[ALT] = "blue Circle";
+"default"[ALT,SHIFT] = "red Filled Circle";
+"default"[ALT,CONTROL] = "semi-transparent Circle";					
 
 #
 # Hot key / undo key.
